<resources>
    <string name="app_name">Pulse-Eco-CodeFu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="title_activity_qr_code">QrCodeActivity</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="default_web_client_id">444421135656-ejlb2236uhljtegq49vmoeq15fvfptn8.apps.googleusercontent.com</string>
    Added-StepCounterImplementation
    <string name="title_activity_step_counter">StepCounterActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events">Events</string>
    <string name="activity_logs">Activity Logs</string>
</resources>