<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.codefu.pulse_eco.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.codefu.pulse_eco.profile.ProfileFragment"
        android:label="Profile"
        tools:layout="@layout/fragment_profile">
    <action
        android:id="@+id/action_profileFragment_to_homeFragment"
        app:destination="@id/navigation_home"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.codefu.pulse_eco.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_event"
        android:name="com.codefu.pulse_eco.events.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.codefu.pulse_eco.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.codefu.pulse_eco.logs.ActivityLogsFragment"
        android:label="@string/activity_logs"
        tools:layout="@layout/fragment_activity_logs" />
</navigation>